--- a/milestone-event.html
+++ b/milestone-event.html
@@ -6,7 +6,7 @@
   <title>Milestone Event - Live Event GM Tool</title>
   <link rel="icon" type="image/png" href="Icon/favicon.png" />
   <link rel="stylesheet" href="styles.css" />
-  <link rel="stylesheet" href="tabs/le3.css" />
+  <link rel="stylesheet" href="tabs/le3.css?v=20260212" />
 </head>
 <body>
   <div class="app">
@@ -72,6 +72,6 @@
     </div>
   </div>
 
-  <script src="tabs/le3.js"></script>
+  <script src="tabs/le3.js?v=20260212"></script>
 </body>
 </html>
