--- a/live-events.html
+++ b/live-events.html
@@ -20,7 +20,7 @@
           <div class="subtitle">Timeline manager for live events</div>
         </div>
       </div>
-      <div class="nav-path">Home / Live Events</div>
+      <button class="nav-helper" id="le1HelpBtn" type="button">Hướng dẫn thao tác</button>
       <div class="actions">
         <div class="timezone-control">
           <label for="timezoneSelect">Time zone</label>
