--- a/milestone-event.html
+++ b/milestone-event.html
@@ -20,7 +20,7 @@
           <div class="subtitle">Milestone Event timeline</div>
         </div>
       </div>
-      <div class="nav-path">Home / Milestone Event</div>
+      <button class="nav-helper" id="le3HelpBtn" type="button">Hướng dẫn thao tác</button>
     </header>
 
     <div class="le3-layout" id="le3Layout">
